--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,81 +1,105 @@
-version: "3.8"
-
 services:
   postgres:
     image: postgres:15
     container_name: postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: root1234
-    build:
-      dockerfile: ./db/migrations/Dockerfile
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: nimbus
     ports:
-      - 5435:5432
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - app_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     restart: always
 
-  films:
-    container_name: films
-    build:
-      dockerfile: ./cmd/films/Dockerfile
-    ports:
-      - 8020:8020
-      - 8021:8021
+  migrate:
+    image: migrate/migrate
     networks:
       - app_network
+    volumes:
+      - ./db/migrations:/migrations
+    command:
+      - -path=/migrations
+      - -database=postgres://postgres:postgres@postgres:5432/netrunners?sslmode=disable
+      - up
     depends_on:
-      - postgres
-    restart: always
-
-  users:
-    container_name: users
-    build:
-      dockerfile: ./cmd/users/Dockerfile
-    ports:
-      - 8030:8030
-      - 8031:8031
-    networks:
-      - app_network
-    depends_on:
-      - postgres
-    restart: always
-
-  sessions:
-    container_name: sessions
-    environment:
-      SECRETKEY: SECRETKEY
-    build:
-      dockerfile: ./cmd/sessions/Dockerfile
-    ports:
-      - 8010:8010
-      - 8011:8011
-    networks:
-      - app_network
-    depends_on:
-      - postgres
-    restart: always
+      postgres:
+        condition: service_healthy
 
   app:
     container_name: app
     build:
+      context: .
       dockerfile: ./cmd/app/Dockerfile
     ports:
-      - 8081:8081
+      - "8081:8081"
     networks:
       - app_network
     depends_on:
       - films
       - users
       - sessions
-      - postgres
+    restart: always
+
+  films:
+    container_name: films
+    build:
+      context: .
+      dockerfile: ./cmd/films/Dockerfile
+    ports:
+      - "8020:8020"
+      - "8021:8021"
+    networks:
+      - app_network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: always
+
+  users:
+    container_name: users
+    build:
+      context: .
+      dockerfile: ./cmd/users/Dockerfile
+    ports:
+      - "8030:8030"
+      - "8031:8031"
+    networks:
+      - app_network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: always
+
+  sessions:
+    container_name: sessions
+    build:
+      context: .
+      dockerfile: ./cmd/sessions/Dockerfile
+    environment:
+      SECRETKEY: SECRETKEY
+    ports:
+      - "8010:8010"
+      - "8011:8011"
+    networks:
+      - app_network
+    depends_on:
+      postgres:
+        condition: service_healthy
     restart: always
 
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
     ports:
-      - 8091:9090
+      - "9090:9090"
     command:
       - --config.file=/etc/prometheus/prometheus.yml
     volumes:
@@ -91,8 +115,9 @@ services:
   cadvisor:
     image: gcr.io/cadvisor/cadvisor-amd64:v0.49.1
     container_name: cadvisor
+    privileged: true
     ports:
-      - 8090:8080
+      - "8090:8080"
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
@@ -108,26 +133,27 @@ services:
     command:
       - '--path.rootfs=/host'
     pid: host
-    restart: always
+    ports:
+      - "9100:9100"
     volumes:
       - '/:/host:ro,rslave'
     networks:
       - app_network
-    ports:
-      - 8093:9100
+    restart: always
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:latest
+    container_name: grafana
     user: root
     ports:
-      - 8092:3000
+      - "3000:3000"
     volumes:
       - ./grafana:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
-    container_name: grafana
-    hostname: grafana
     environment:
       TZ: "Europe/Moscow"
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_SECURITY_ADMIN_USER: admin
     networks:
       - app_network
     depends_on:
@@ -137,3 +163,6 @@ services:
 networks:
   app_network:
     driver: bridge
+
+volumes:
+  postgres_data:
